--- a/client/src/styles/responsive.css
+++ b/client/src/styles/responsive.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 768px) {
     .boxMessages {
         font-size: 2rem;
-        background: aqua;
+        /* background: aqua; */
     }
 
     #VectorSmartObject_1 
