--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,3 +1,17 @@
+#Layer9 
+{ 
+	left: 1550px; 
+    top: 700px; 
+} 
+    
+#Layer9 img {
+    width: 300px;
+    height: 300px;
+}
+
+
+
+
 .disabledbutton {
     pointer-events: none;
     opacity: 0.4;
