--- a/client/src/styles/animations.css
+++ b/client/src/styles/animations.css
@@ -64,3 +64,28 @@
     animation: moveTo6 2s forwards;
     transition: 2s
 }
+
+
+@media only screen and (max-width: 812px) {
+    @keyframes moveTo1 { to { left: 70px; top: 219px; } }
+    @keyframes moveTo2 { to { left: 500px; top: 100px; } } 
+    @keyframes moveTo3 { 
+        from {left: 500px; top: 100px;}
+        to { left: 950px; top: 180px; } 
+    }
+
+    @keyframes moveTo4 { 
+        from {left: 950px; top: 180px; }
+        to { left: 500px; top: 260px; } 
+    }
+
+    @keyframes moveTo5 { 
+        from { left: 500px; top: 260px; } 
+        to {left: 0px; top: 460px;}
+    }
+    @keyframes moveTo6 { 
+        from {left: 0px; top: 460px;}
+        to { left: 950px; top: 350px; } 
+    }
+
+}
