redux wins/loses

--- a/client/src/styles/stylesGame.css
+++ b/client/src/styles/stylesGame.css
@@ -4,6 +4,7 @@
   cursor: none;
 }
 
+/* -------------------------------- menu bar ------------------------------- */
 .background-image {
   background-image: url(../assets/images/Shape24.png);
   background-repeat:repeat-y;
